hphp/hack/test/typecheck/as_expression/callable.php.exp
File "callable.php", line 6, characters 9-28:
Callable typehints cannot be used with as-expressions (Parsing[1002])
